Fix alignment of everything inside intro component

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
     align-items: center;
     border-bottom: 1px rgb(175, 175, 175) solid;
     position: relative;
+    z-index: 10000;
 }
 
 .nav ul {
@@ -55,6 +56,7 @@
 
 .menubutton {
     display: none;
+    transform: scale(1.5);
     position: absolute;
     right: 5%;
     top: 22px;
@@ -119,28 +121,33 @@
 }
 
 /* home */
-.page {
+.intro-section {
     width: 100%;
+    background-color: #495E57;
+    padding: 40px 10%;
+    height: 500px;
 }
 
 .intro-component {
     width: 100%;
-    padding: 10px 10%;
     display: flex;
     justify-content: space-between;
-    background-color: #495E57;
-    align-items: center;
+    align-items: flex-start;
 }
 
-.intro-component > div {
+.display {
     width: 40%;
 }
 
-.intro-component img {
+.big {
     width: 350px;
-    height: 350px;
-    position: relative;
-    top: 50px;
+    height: auto;
+    border-radius: 15px;
+}
+
+.small {
+    display: none;
+    width: 100%;
     border-radius: 15px;
 }
 
@@ -169,52 +176,50 @@
     height: 50px;
     padding: 10px 10px;
     background-color: #F4CE14;
-    border-radius: 10px;
+    border-radius: 15px;
     align-items: center;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+#booking-button:hover {
+    cursor: pointer;
 }
 
 #booking-button:active {
     transform: scale(0.9);
 }
 
-@media screen and (max-width:1150px) {
-    .intro-component {
-        padding: 10px 5%;
-    }
-}
-
-@media screen and (max-width:1030px) {
-    .intro-component img {
-        top: 110px;
+@media screen and (max-width:1160px) {
+    .intro-section {
+        padding: 40px 5%;
+        height: fit-content;
     }
 }
 
 @media screen and (max-width:1000px) {
-    .page {
-        margin-top: 60px;
+    .intro-section {
+        position: relative;
+        top: 60.8px;
     }
 }
 
-@media screen and (max-width: 775px) {
-    .intro-component img {
-        top: 120px;
-    }
-}
 @media screen and (max-width:700px) {
     .intro-component {
         flex-direction: column;
+        align-items: start;
     }
-
-    .intro-component > div {
+    
+    .display {
         width: 100%;
     }
+    
+    .big {
+        display: none;
+    }
 
-    .intro-component img {
-        width: 100%;
-        height: auto;
-        top: 0;
+    .small {
+        display: block;
     }
 }
 
